--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 保加利亚-259.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇨🇳 中国-601.8KB/s(Youtube:不良林), server: aiaph1.www.klrxyru.cn, port: 1641, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 保加利亚-206.2KB/s(Youtube:不良林), server: 213.183.63.217, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-190.4KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇯🇵 日本-3.18MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-689.6KB/s(Youtube:不良林), server: 213.183.51.171, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇭🇰 香港-4.17MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林), server: 213.183.53.212, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 波兰-885.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
   - {name: 波兰-688.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
   - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
-      - 保加利亚-206.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
-      - 保加利亚-206.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
-      - 保加利亚-206.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
-      - 保加利亚-206.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
-      - 保加利亚-206.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
-      - 保加利亚-206.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 保加利亚-259.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
-      - 保加利亚-206.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
