--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-190.4KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇯🇵 日本-3.18MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-689.6KB/s(Youtube:不良林), server: 213.183.51.171, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇭🇰 香港-4.17MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林), server: 213.183.53.200, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
   - {name: 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林), server: 213.183.53.212, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-885.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 波兰-688.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-821.2KB/s(Youtube:不良林), server: 185.172.113.182, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林), server: 213.183.53.177, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 38.75.136.102, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 波兰-885.8KB/s(Youtube:不良林)
-      - 波兰-688.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 波兰-885.8KB/s(Youtube:不良林)
-      - 波兰-688.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 波兰-885.8KB/s(Youtube:不良林)
-      - 波兰-688.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 波兰-885.8KB/s(Youtube:不良林)
-      - 波兰-688.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 波兰-885.8KB/s(Youtube:不良林)
-      - 波兰-688.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 波兰-885.8KB/s(Youtube:不良林)
-      - 波兰-688.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-190.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 波兰-885.8KB/s(Youtube:不良林)
-      - 波兰-688.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
