--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林), server: 213.183.53.200, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林), server: 213.183.53.212, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇯🇵 日本-821.2KB/s(Youtube:不良林), server: 185.172.113.182, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-3.32MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林), server: 213.183.53.177, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林), server: 213.183.53.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇳🇱 荷兰-1.49MB/s(Youtube:不良林), server: 213.183.51.172, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
   - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.83MB/s(Youtube:不良林), server: 38.75.136.102, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-821.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.32MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.83MB/s(Youtube:不良林)
