--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,10 +5,10 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林), server: 213.183.53.200, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇭🇰 香港-4.17MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
   - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林), server: 213.183.53.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇳🇱 荷兰-1.59MB/s(Youtube:不良林), server: 213.183.59.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,10 +21,10 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
@@ -36,10 +36,10 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
@@ -52,10 +52,10 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
@@ -66,17 +66,16 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
@@ -88,10 +87,10 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
@@ -104,10 +103,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
@@ -129,10 +128,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
